--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: Deploy Django to EC2
+
 on:
   push:
     branches: [ main ]
@@ -17,10 +18,11 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            if [ ! -d "django-app" ]; then
-              git clone https://github.com{{ github.repository }}.git django-app
+            if [ ! -d "masterplandjango" ]; then
+              # FIX: Added the slash and correct variable syntax
+              git clone https://github.com{{ github.repository }}.git masterplandjango
             fi
-            cd django-app
+            cd masterplandjango
             git pull origin main
             sudo docker stop django-app || true
             sudo docker rm django-app || true
